fix: identação e posição do toggle de dark mode

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 .container {
-    min-width: 100%;
+  min-width: 100%;
 }
 
 .layout-header,
@@ -8,190 +8,189 @@
 .tecnologias,
 .projetos,
 .label {
-    background-color: var(--dark-gray);
-    color: var(--font-color);
-    border: 1px solid var(--alt-gray);
-    -webkit-box-shadow: 0px 0px 5px 0px var(--shadow-color);
-    -moz-box-shadow: 0px 0px 5px 0px var(--shadow-color);
-    box-shadow: 0px 0px 5px 0px var(--shadow-color);
+  background-color: var(--dark-gray);
+  color: var(--font-color);
+  border: 1px solid var(--alt-gray);
+  -webkit-box-shadow: 0px 0px 5px 0px var(--shadow-color);
+  -moz-box-shadow: 0px 0px 5px 0px var(--shadow-color);
+  box-shadow: 0px 0px 5px 0px var(--shadow-color);
 }
 
 .layout-header {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .content a {
-    color: var(--font-color);
-    padding: .5rem 1rem;
-    transition: background .2s ease-in-out;
-    font-weight: 500;
-    border-radius: 7px;
+  color: var(--font-color);
+  padding: 0.5rem 1rem;
+  transition: background 0.2s ease-in-out;
+  font-weight: 500;
+  border-radius: 7px;
 }
 
 .content a:hover {
-    color: var(--alt-gray);
-    background-color: var(--hover-color);
+  color: var(--alt-gray);
+  background-color: var(--hover-color);
 }
 
 .content a:focus {
-    font-weight: bold;
-    color: #808080;
-    text-decoration: underline;
-    font-size: 1.1rem;
+  font-weight: bold;
+  color: #808080;
+  text-decoration: underline;
+  font-size: 1.1rem;
 }
 
 .layout-clima {
-    width: 250px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  width: 250px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .layout-clima p {
-    margin: .5rem;
+  margin: 0.5rem;
 }
 
 .sobre {
-    padding: 2rem;
-    text-align: center;
+  padding: 2rem;
+  text-align: center;
 }
 
 .sobre .texto {
-    margin: 2rem auto;
+  margin: 2rem auto;
 }
 
 .sobre .texto h3,
 p {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .sobre .texto span {
-    color: var(--orange);
-    font-size: 1.7rem;
-    font-weight: bold;
+  color: var(--orange);
+  font-size: 1.7rem;
+  font-weight: bold;
 }
 
 .sobre .img img {
-    border: 4px solid var(--font-color);
-    border-radius: 50%;
-    width: 80%;
-    margin: 0 auto;
+  border: 4px solid var(--font-color);
+  border-radius: 50%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .tecnologias {
-    margin: 2rem auto;
+  margin: 2rem auto;
 }
 
 .tecnologias h2 {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .tecnologias img {
-    width: 48px;
-    margin: 1rem;
+  width: 48px;
+  margin: 1rem;
 }
 
 .projetos {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .projetos h2 {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .carousel-item img {
-    width: 80%;
-    margin: 0 auto;
-    border-radius: 1rem;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 1rem;
 }
 
-
 .carousel-item p {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .carousel-item .links a {
-    margin: .5rem;
+  margin: 0.5rem;
 }
 
 .seta {
-    margin-bottom: 9rem;
-    color: var(--font-color);
+  margin-bottom: 9rem;
+  color: var(--font-color);
 }
 
 .icones a {
-    text-decoration: none;
-    transition: .3s ease-in-out;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
 }
 
 .icones img {
-    transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .icones img:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 /* barra de rolagem */
 
 body::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--alt-gray);
+  background: var(--alt-gray);
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: var(--orange);
-    border-radius: 20px;
-    border: 3px solid var(--dark-gray);
+  background-color: var(--orange);
+  border-radius: 20px;
+  border: 3px solid var(--dark-gray);
 }
 
 /* Toggle tema */
 
 .checkbox {
-    opacity: 0;
-    position: absolute;
+  opacity: 0;
+  position: absolute;
 }
 
 .label {
-    border-radius: 50px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    padding: 5px;
-    position: relative;
-    top: 8px;
-    left: 10px;
-    height: 26px;
-    width: 50px;
-    transform: scale(1.1);
+  padding: 5px;
+  position: relative;
+  top: 8px;
+  left: 10px;
+  height: 26px;
+  width: 50px;
+  transform: scale(1.1);
 }
 
 .label .ball {
-    background-color: var(--font-color);
-    border-radius: 50%;
-    position: absolute;
-    width: 20px;
-    height: 20px;
+  background-color: var(--font-color);
+  border-radius: 50%;
+  position: absolute;
+  width: 20px;
+  height: 20px;
 
-    top: 2px;
-    left: 2px;
-    transform: translateX(0px);
-    transition: transform .2s linear;
+  top: 2px;
+  left: 2px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
 }
 
 .checkbox:checked + .label .ball {
-    transform: translateX(24px);
+  transform: translateX(24px);
 }
 
 .fa-sun {
-    color: #f39c12;
+  color: #f39c12;
 }
 
 .fa-moon {
-    color: #f1c40f;
+  color: #f1c40f;
 }
